# pcplayerpicker

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
.github/workflows/: cloudflare.yml
app_core/: Cargo.toml
app_core/src/: events.rs  lib.rs  models.rs  rng.rs  schedule_edit.rs  session.rs
app_core/src/db/: mod.rs  queries.rs
app_core/src/io/: csv.rs
app_core/src/ranking/: goal_model.rs  mod.rs  synergy.rs  trivariate.rs
app_core/src/scheduler/: info_max.rs  match_candidate.rs  mod.rs  round_robin.rs
app_core/tests/: full_simulation.rs
client_app/: Cargo.toml  Trunk.toml  index.html  manifest.json  package.json  robots.txt  sitemap.xml  sw.js  tailwind.config.js
client_app/src/: coach_sync.rs  input.css  main.rs  meta.rs  read_only_cache.rs  read_only_sync.rs
client_app/src/pages/: assistant.rs  mod.rs  player.rs  pwa.rs  score_entry.rs  site.rs
client_app/src/pages/coach/: dashboard.rs  home.rs  match_player_sheet.rs  mod.rs  schedule_export.rs  setup.rs
client_app/src/state/: idb.rs  mod.rs  opfs.rs
client_app/src/sync/: mod.rs
server_cloudflare/: Cargo.toml  wrangler.toml
server_cloudflare/.wrangler/cache/: wrangler-account.json
server_cloudflare/migrations/: 0001_init.sql  0002_session_pins.sql  0003_share_token_pins.sql  0004_session_coach_key.sql  0005_archived_sessions.sql  0006_device_heartbeats.sql  0007_sequence_cursor_and_query_indexes.sql  0008_admin_snapshots.sql  0009_archived_session_score_entry_mode.sql
server_cloudflare/src/: lib.rs
