[package]
name = "client_app"
version = "0.1.0"
edition = "2021"

[dependencies]
app_core = { path = "../app_core", features = ["ranking", "scheduling", "js"] }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }

# Required for getrandom to work in WASM (rand 0.8 / uuid 1 use getrandom 0.2 internally)
getrandom = { version = "0.2", features = ["js"] }

# Better panic messages in WASM dev builds
console_error_panic_hook = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "MediaQueryList",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "Navigator",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "Storage",
    "StorageManager",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Clipboard",
    "Blob",
    "BlobPropertyBag",
    "File",
    "FileList",
    "HtmlInputElement",
    "Url",
    # IndexedDB — used for durable session backup alongside localStorage
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbOpenDbRequest",
    "IdbRequest",
    "EventTarget",
]}

[dev-dependencies]
wasm-bindgen-test = "0.3"
