[package]
name = "server_cloudflare"
version = "0.1.0"
edition = "2021"

# Required for Cloudflare Workers WASM target
[lib]
crate-type = ["cdylib"]

# NOTE: app_core is imported with DEFAULT features only (no `ranking`, no `scheduling`).
# This is critical: nalgebra and the ranking engine must NOT enter the Worker bundle.
# All heavy computation runs client-side in the browser WASM.
[dependencies]
app_core = { path = "../app_core" }

# worker 0.7: "http" enables http-crate types; "d1" enables D1 database bindings (Phase 4)
worker = { version = "0.7", features = ["http", "d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
